Added text in tabs section

--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
           <div class="tab-content">
             <div id="home" class="tab-pane fade in active">
               <h3>Home</h3>
-              <p>No home jaki.</p>
+              <p>No home jaki. Dodaj lub zmień tu jakiś tekst.</p>
             </div>
             <div id="menu1" class="tab-pane fade">
               <h3>Moje hobby</h3>
-              <p>Moje hobby jakie.</p>
+              <p>Moje hobby jakie. Dodaj lub zmień tu jakiś tekst.</p>
             </div>
             <div id="menu2" class="tab-pane fade">
               <h3>Coś czeciego</h3>
-              <p>No czecie jakie.</p>
+              <p>No czecie jakie. Dodaj lub zmień tu jakiś tekst.</p>
             </div>
           </div>
         </div>
