Dodałem inne zmiany.

--- a/index.html
+++ b/index.html
@@ -89,14 +89,17 @@
             <div id="home" class="tab-pane fade in active">
               <h3>Home</h3>
               <p>No home jaki.</p>
+              <p>Mogę napisać tu coś innego.</p>
             </div>
             <div id="menu1" class="tab-pane fade">
               <h3>Moje hobby</h3>
               <p>Moje hobby jakie.</p>
+              <p>Podobnie jak i tu.</p>
             </div>
             <div id="menu2" class="tab-pane fade">
               <h3>Coś czeciego</h3>
               <p>No czecie jakie.</p>
+              <p>Tu postąpię nie inaczej.</p>
             </div>
           </div>
         </div>
